# WithPet-BE

./: .editorconfig  .gitattributes  .gitignore  README.md  convert_to_spectacular.py  pet_stores.csv  pyproject.toml  requirements.txt  schema.yml  setup_withpet_env.sh
.github/workflows/: checks.yml  deploy.yml
apps/common/: __init__.py  apps.py  exceptions.py
apps/community/comments/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/community/common/: __init__.py  categories.py  comments_preview.py  id_codec.py  ids.py  reports.py
apps/community/likes/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/community/posts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/community/reports/: admin.py  apps.py  constants.py  models.py  repositories.py  serializers.py  services.py  urls.py  views.py
apps/maps/: __init__.py  admin.py  apps.py  urls.py
apps/maps/managers/: __init__.py  store.py
apps/maps/migrations/: 0001_initial.py
apps/maps/models/: __init__.py  store.py
apps/maps/serializers/: __init__.py  like_place.py  store.py
apps/maps/services/: __init__.py  location_filter.py  store_distance_cal.py  store_filter.py
apps/maps/store_filter_list/: managers.py  models.py
apps/maps/utils/: 1_provinces.csv  1_provinces.json  (+6 more)
apps/mypage/: __init__.py  apps.py  serializers.py  urls.py  views.py
apps/users/: enums.py  models.py  urls.py  views.py
config/: __init__.py  settings.py  urls.py
docs/: openapi.yaml
envs/: .env.local.example  .env.prod.example
(+64 files in other folders)
